--- a/locale/en_US/LC_MESSAGES/application_admin.po
+++ b/locale/en_US/LC_MESSAGES/application_admin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-25 11:38+0200\n"
-"PO-Revision-Date: 2020-11-18 14:11+0100\n"
+"PO-Revision-Date: 2020-05-12 15:29+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: en_US\n"
@@ -708,7 +708,7 @@ msgid "Photos"
 msgstr "Photos"
 
 msgid "Přidat obrázky do fotogalerie"
-msgstr "Add pictures to the photo gallery"
+msgstr "Add images to the photo gallery"
 
 msgid "Přidat fotografii"
 msgstr "Add a photo"
@@ -4271,18 +4271,18 @@ msgstr "Import"
 msgid "Applicable to eshop?"
 msgstr "Applicable to eshop?"
 
+msgid ""
+"You are about to permanently delete user %1\n"
+"Are you sure about that?"
+msgstr ""
+"You are about to permanently delete user %1\n"
+"Are you sure about that?"
+
 #~ msgid "System name"
 #~ msgstr "System name"
 
 #~ msgid "Count of links"
 #~ msgstr "Count of links"
-
-#~ msgid ""
-#~ "You are about to permanently delete user %1\n"
-#~ "Are you sure about that?"
-#~ msgstr ""
-#~ "You are about to permanently delete user %1\n"
-#~ "Are you sure about that?"
 
 #~ msgid "Show larger image"
 #~ msgstr "Show larger image"
