--- a/locale/cs_CZ/LC_MESSAGES/application.po
+++ b/locale/cs_CZ/LC_MESSAGES/application.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-09 22:49+0200\n"
-"PO-Revision-Date: 2021-09-09 22:50+0200\n"
+"PO-Revision-Date: 2021-10-18 13:22+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: cs_CZ\n"
@@ -55,7 +55,7 @@ msgid "Go to the homepage"
 msgstr "Jděte na homepage"
 
 msgid "Currently you are not logged as an admin user."
-msgstr "Momentálně nejste přihlášen jako administrátor"
+msgstr "Momentálně nejste přihlášen jako administrátor."
 
 msgid "or"
 msgstr "nebo"
@@ -70,7 +70,7 @@ msgid "Sign in"
 msgstr "Přihlásit se"
 
 msgid "Error 404: Page not found"
-msgstr "Chyba 404: Stránka nebyla nalezena."
+msgstr "Chyba 404: Stránka nebyla nalezena"
 
 msgid "We are deeply sorry, but the page on the URI <em>%1</em> wasn't found."
 msgstr ""
@@ -91,7 +91,7 @@ msgid ""
 msgstr "Toto není publikovaný článek! Není dostupný veřejnosti."
 
 msgid "At the moment there are no news."
-msgstr "V této chvíli nejsou žádné novinky"
+msgstr "V této chvíli nejsou žádné novinky."
 
 msgid "Nakupte ještě za %1 a dostanete dopravu zdarma."
 msgstr "Nakupte ještě za %1 a dostanete dopravu zdarma."
@@ -214,7 +214,7 @@ msgid "Discount"
 msgstr "Sleva"
 
 msgid "catalog number: %1"
-msgstr "Číslo produktu: %1"
+msgstr "číslo produktu: %1"
 
 msgid "This product is not in offer"
 msgstr "Tento produkt není v nabídce"
@@ -390,7 +390,7 @@ msgid "You are signed in as <em>%1</em>."
 msgstr "Jste přihlášen jako <em>%1</em>."
 
 msgid "Click on the button to sign out."
-msgstr "Pro odhlášení klikněte na tlačítko"
+msgstr "Pro odhlášení klikněte na tlačítko."
 
 msgid "Name"
 msgstr "Jméno"
@@ -824,7 +824,7 @@ msgid "Optional"
 msgstr "Volitelné"
 
 msgid "Examples:"
-msgstr "Příklady"
+msgstr "Příklady:"
 
 msgid "Edit product"
 msgstr "Upravit produkt"
@@ -866,7 +866,7 @@ msgid "Edit links"
 msgstr "Editovat odkazy"
 
 msgid "Edit page"
-msgstr "Editace stránky"
+msgstr "Upravit stránku"
 
 msgid "Create a subpage"
 msgstr "Vytvořit podstránku"
@@ -1122,7 +1122,7 @@ msgid ""
 "procedure"
 msgstr ""
 "Pokud ješte nemáte účet na těchto stránkách, měli byste se rozhodně "
-"zaregistrovat "
+"zaregistrovat"
 
 msgid "Sign in to our site"
 msgstr "Přihlaste se na naše stránky"
@@ -1339,7 +1339,7 @@ msgstr "Doprava a platba"
 
 #: ../app/controllers/application.php:112
 msgid "Delivery data"
-msgstr "Doručovací údaje"
+msgstr "Doručovací data"
 
 #: ../app/controllers/application.php:113
 msgid "Summary"
@@ -1357,7 +1357,7 @@ msgstr "Přikazy v %s"
 #: ../app/controllers/application_rest_api.php:172
 #, php-format
 msgid "submit using method %s"
-msgstr "Odeslat metodou %s"
+msgstr "odeslat metodou %s"
 
 #: ../app/controllers/application_rest_api.php:219
 msgid "Nothing has been found on this address"
@@ -1541,7 +1541,7 @@ msgstr "Zůstal jste přihlášen jako <em>%s</em>"
 
 #: ../app/controllers/main_controller.php:11
 msgid "Welcome!"
-msgstr "Vítejte"
+msgstr "Vítejte!"
 
 #: ../app/controllers/orders_controller.php:5
 msgid "Archiv objednávek"
@@ -1764,7 +1764,7 @@ msgstr "Toto uživatelské jméno je již zabráno"
 
 #: ../app/fields/login_field.php:20
 msgid "Only letters, numbers, dots and dashes are allowed"
-msgstr "Zadávejte pouze písmena, číslice, tečky a pomlčky."
+msgstr "Zadávejte pouze písmena, číslice, tečky a pomlčky"
 
 #: ../app/fields/object_field.php:34
 msgid "There is no such record"
@@ -1818,7 +1818,7 @@ msgstr "typ produktu"
 #: ../app/fields/tags_field.php:21
 msgid "Ensure that there are max %max% tags (now there are %count%)"
 msgstr ""
-"Ujistěte se, že je zde nejvýše %max% štítků (nyní je tady %count% štítků) "
+"Ujistěte se, že je zde nejvýše %max% štítků (nyní je tady %count% štítků)"
 
 #: ../app/fields/tags_field.php:22
 #, php-format
@@ -2480,6 +2480,27 @@ msgstr "Objednávka č. %s v e-shopu %s"
 msgid "obj. %s"
 msgstr "obj. %s"
 
+msgid "naskladnění sleduje hlídací pes"
+msgstr "naskladnění sleduje hlídací pes"
+
+msgid "aktivovat hlídacího psa"
+msgstr "aktivovat hlídacího psa"
+
+msgid "Zobrazit detaily"
+msgstr "Zobrazit detaily"
+
+msgid "searching ..."
+msgstr "hledání ..."
+
+msgid "cena od<br>%1"
+msgstr "cena od<br>%1"
+
+msgid "Tvůrce"
+msgstr "Tvůrce"
+
+msgid "Nic nebylo nelezeno."
+msgstr "Nic nebylo nelezeno."
+
 #~ msgid "Price: %1 <span class=\"dph\">incl. VAT</span>"
 #~ msgstr "Cena: %1 <span class=\"dph\">včetně DPH</span>"
 
@@ -2488,15 +2509,6 @@ msgstr "obj. %s"
 
 #~ msgid "Sdílet"
 #~ msgstr "Sdílet"
-
-#~ msgid "naskladnění sleduje hlídací pes"
-#~ msgstr "naskladnění sleduje hlídací pes"
-
-#~ msgid "aktivovat hlídacího psa"
-#~ msgstr "aktivovat hlídacího psa"
-
-#~ msgid "Zobrazit detaily"
-#~ msgstr "Zobrazit detaily"
 
 #~ msgid "Ukázat na mapě"
 #~ msgstr "Ukázat na mapě"
@@ -2528,14 +2540,8 @@ msgstr "obj. %s"
 #~ msgid "Pobočka: %1, %2, %3, %4"
 #~ msgstr "Pobočka: %1, %2, %3, %4"
 
-#~ msgid "searching ..."
-#~ msgstr "hledání ..."
-
 #~ msgid "Obchodní podmínky"
 #~ msgstr "Obchodní podmínky"
-
-#~ msgid "cena od<br>%1"
-#~ msgstr "cena od<br>%1"
 
 #~ msgid "Článek"
 #~ msgstr "Článek"
@@ -2545,12 +2551,6 @@ msgstr "obj. %s"
 
 #~ msgid "Stránka"
 #~ msgstr "Stránka"
-
-#~ msgid "Tvůrce"
-#~ msgstr "Tvůrce"
-
-#~ msgid "Nic nebylo nelezeno."
-#~ msgstr "Nic nebylo nelezeno."
 
 #~ msgid "cena od %1"
 #~ msgstr "cena od %1"
@@ -3817,7 +3817,7 @@ msgstr "obj. %s"
 #~ msgstr "Technické specifikace"
 
 #~ msgid "There is no record yet."
-#~ msgstr "Není zde žádný záznam"
+#~ msgstr "Není zde žádný záznam."
 
 #~ msgid "Edit value"
 #~ msgstr "Upravit hodnotu"
