--- a/locale/cs_CZ/LC_MESSAGES/vendor.po
+++ b/locale/cs_CZ/LC_MESSAGES/vendor.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-25 11:38+0200\n"
-"PO-Revision-Date: 2021-08-25 11:48+0200\n"
+"PO-Revision-Date: 2020-05-12 15:27+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: \n"
 "Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 #: ../vendor/atk14/async-file-field/src/app/controllers/api/temporary_file_uploads_controller.php:36
 msgid "Temporary file uploading is not enabled"
@@ -244,8 +244,8 @@ msgstr "Zadejte prosím platné PSČ"
 msgid "Enter the ZIP code as NNN NN"
 msgstr "Zadejte PSČ ve formátu NNN NN"
 
-#~ msgid "The file was now fully upload, please upload it again"
-#~ msgstr "Soubor nebyl plně nahrán, nahrajte jej prosím znovu"
+msgid "The file was now fully upload, please upload it again"
+msgstr "Soubor nebyl plně nahrán, nahrajte jej prosím znovu"
 
 #~ msgid "Enter valid phone number (+420.605123456)"
 #~ msgstr "Zadejte platné telefonní číslo (+420.605123456)"
