[Gettext] Czech translations

--- a/locale/cs_CZ/LC_MESSAGES/application.po
+++ b/locale/cs_CZ/LC_MESSAGES/application.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-28 21:51+0200\n"
-"PO-Revision-Date: 2021-10-28 21:58+0200\n"
+"POT-Creation-Date: 2021-10-28 22:54+0200\n"
+"PO-Revision-Date: 2021-10-28 22:55+0200\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: cs_CZ\n"
@@ -1272,6 +1272,9 @@ msgstr "Změnit vaše údaje"
 #: ../app/controllers/users_controller.php:65
 msgid "Change your password"
 msgstr "Změna vašeho hesla"
+
+msgid "Favourite products"
+msgstr "Oblíbené produkty"
 
 msgid "Current password"
 msgstr "Aktuální heslo"
