--- a/locale/cs_CZ/LC_MESSAGES/vendor.po
+++ b/locale/cs_CZ/LC_MESSAGES/vendor.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-28 21:51+0200\n"
-"PO-Revision-Date: 2020-05-12 15:27+0200\n"
+"PO-Revision-Date: 2022-01-31 15:24+0100\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: \n"
 "Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../vendor/atk14/async-file-field/src/app/controllers/api/temporary_file_uploads_controller.php:36
 msgid "Temporary file uploading is not enabled"
@@ -24,7 +24,7 @@ msgstr "Nahrávání dočasných souborů není povoleno"
 #: ../vendor/atk14/async-file-field/src/app/controllers/api/temporary_file_uploads_controller.php:45
 #, php-format
 msgid "The file exceeds the maximum file size, which is %s"
-msgstr "Soubor přesahuje maximální povolenou velikost, která je %s"
+msgstr "Soubor překračuje maximální velikost, která je %s."
 
 #: ../vendor/atk14/async-file-field/src/app/controllers/api/temporary_file_uploads_controller.php:65
 msgid "Error 1"
@@ -36,11 +36,11 @@ msgstr "Chyba 2"
 
 #: ../vendor/atk14/async-file-field/src/app/fields/async_file_field.php:12
 msgid "The file has been already deleted on the server, please upload it again"
-msgstr "Soubor již byl na serveru smazán, nahrajte jej prosím znovu"
+msgstr "Soubor byl na serveru již smazán, nahrajte jej prosím znovu."
 
 #: ../vendor/atk14/async-file-field/src/app/fields/async_file_field.php:13
 msgid "The file was not fully uploaded, please upload it again"
-msgstr "Soubor nebyl plně nahrán, nahrajte jej prosím znovu"
+msgstr "Soubor nebyl zcela nahrán, nahrajte jej prosím znovu."
 
 #: ../vendor/atk14/category-filter/src/app/forms/filter_form.php:8
 msgid "Filtrovat"
@@ -131,8 +131,8 @@ msgid ""
 "We are experiencing some technical issue during the communication with an "
 "captcha API. Please try it later."
 msgstr ""
-"Zaznamenali jsme technický problém během komunikace s API CAPTCHA. Zkuste to "
-"prosím později."
+"Při komunikaci s rozhraním captcha API se vyskytl technický problém. Zkuste "
+"to prosím později."
 
 #: ../vendor/atk14/mail-panel/src/MailPanel.php:44
 msgid "Headers"
@@ -244,8 +244,8 @@ msgstr "Zadejte prosím platné PSČ"
 msgid "Enter the ZIP code as NNN NN"
 msgstr "Zadejte PSČ ve formátu NNN NN"
 
-#~ msgid "The file was now fully upload, please upload it again"
-#~ msgstr "Soubor nebyl plně nahrán, nahrajte jej prosím znovu"
+msgid "The file was now fully upload, please upload it again"
+msgstr "Soubor nebyl plně nahrán, nahrajte jej prosím znovu"
 
 #~ msgid "Enter valid phone number (+420.605123456)"
 #~ msgstr "Zadejte platné telefonní číslo (+420.605123456)"
