--- a/locale/cs_CZ/LC_MESSAGES/application.po
+++ b/locale/cs_CZ/LC_MESSAGES/application.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-01-31 16:16+0100\n"
+"POT-Creation-Date: 2022-02-08 14:17+0100\n"
 "PO-Revision-Date: 2022-01-31 16:19+0100\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
@@ -267,6 +267,65 @@ msgstr "Produkty"
 msgid "No product has been found."
 msgstr "Žádný produkt nebyl nalezen."
 
+msgid "Products in the collection %1"
+msgstr "Produkty v kolekci %1"
+
+msgid ""
+"If you have any question, contact us through the following form. We will "
+"reply to you as soon as we can."
+msgstr ""
+"Pokud máte nějakou otázku, kontaktujte nás prostřednictvím tohoto formuláře. "
+"Odpovíme vám, jak nejdříve budeme moct."
+
+msgid "The message has been sent to us. We will reply as soon as we can."
+msgstr "Zpráva nám byla odeslána. Odpovíme vám, jak nejrychleji umíme."
+
+msgid "Aktuální nastavení"
+msgstr ""
+
+msgid "Obsah cookie se souhlasem"
+msgstr ""
+
+msgid "Souhlasím s použitím vybraných cookies"
+msgstr ""
+
+msgid "Souhlasím s použitím všech cookies"
+msgstr ""
+
+#: ../app/controllers/cookie_consents_controller.php:5
+msgid "Nastavení cookies"
+msgstr ""
+
+msgid "Nemáte uloženou žádnou doručovací adresu"
+msgstr "Nemáte uloženou žádnou doručovací adresu"
+
+msgid "vytvořte novou"
+msgstr "vytvořte novou"
+
+msgid "Přidat novou adresu"
+msgstr "Přidat novou adresu"
+
+#: ../app/controllers/digital_contents_controller.php:22
+msgid "Digitální produkty"
+msgstr "Digitální produkty"
+
+msgid "soubor %1"
+msgstr "soubor %1"
+
+msgid "Stáhnout"
+msgstr "Stáhnout"
+
+msgid "You haven`t added any items to your favourites yet."
+msgstr "Doposud jste nepřidali žádné produkty do svých oblíbených."
+
+msgid "To add product to your favourites, click on %1 icon on product page."
+msgstr ""
+"Chcete-li přidat produkt do oblíbených, klikněte na ikonu %1 na stránce "
+"produktu."
+
+msgid "cena není stanovena"
+msgstr "cena není stanovena"
+
 msgid "Kontaktní údaje pro vyzvednutí zásilky"
 msgstr "Kontaktní údaje pro vyzvednutí zásilky"
 
@@ -303,6 +362,10 @@ msgstr "Zpět na obsah košíku"
 msgid "Zpět na dodací údaje"
 msgstr "Zpět na dodací údaje"
 
+#: ../app/forms/checkouts/summary_form.php:31
+msgid "Zatrhněte prosím souhlas s obchodními podmínkami."
+msgstr "Zatrhněte prosím souhlas s obchodními podmínkami."
+
 msgid ""
 "Kliknutím na tlačítko Dokončit objednávku souhlasíte<br>a&nbsp;potvrzujete, "
 "že&nbsp;jste se seznámil s&nbsp;<a href=\"%1\" target=\"_blank"
@@ -332,49 +395,6 @@ msgstr "Nákup bez registrace"
 
 msgid "Pokračovat bez registrace"
 msgstr "Pokračovat bez registrace"
-
-msgid "Products in the collection %1"
-msgstr "Produkty v kolekci %1"
-
-msgid ""
-"If you have any question, contact us through the following form. We will "
-"reply to you as soon as we can."
-msgstr ""
-"Pokud máte nějakou otázku, kontaktujte nás prostřednictvím tohoto formuláře. "
-"Odpovíme vám, jak nejdříve budeme moct."
-
-msgid "The message has been sent to us. We will reply as soon as we can."
-msgstr "Zpráva nám byla odeslána. Odpovíme vám, jak nejrychleji umíme."
-
-msgid "Nemáte uloženou žádnou doručovací adresu"
-msgstr "Nemáte uloženou žádnou doručovací adresu"
-
-msgid "vytvořte novou"
-msgstr "vytvořte novou"
-
-msgid "Přidat novou adresu"
-msgstr "Přidat novou adresu"
-
-#: ../app/controllers/digital_contents_controller.php:22
-msgid "Digitální produkty"
-msgstr "Digitální produkty"
-
-msgid "soubor %1"
-msgstr "soubor %1"
-
-msgid "Stáhnout"
-msgstr "Stáhnout"
-
-msgid "You haven`t added any items to your favourites yet."
-msgstr "Doposud jste nepřidali žádné produkty do svých oblíbených."
-
-msgid "To add product to your favourites, click on %1 icon on product page."
-msgstr ""
-"Chcete-li přidat produkt do oblíbených, klikněte na ikonu %1 na stránce "
-"produktu."
-
-msgid "cena není stanovena"
-msgstr "cena není stanovena"
 
 msgid "Greetings"
 msgstr "Dobrý den"
@@ -520,15 +540,6 @@ msgstr "e-mail"
 msgid "name"
 msgstr "jméno"
 
-msgid ""
-"V případě, že si chcete Vaši objednávku zkontrolovat,<br/>\n"
-"Vaši objednávku naleznete v sekci <a href=\"%1\" style=\"%2\">\"Historie "
-"objednávek\"</a> Vašeho zákaznického účtu."
-msgstr ""
-"V případě, že si chcete Vaši objednávku zkontrolovat,<br/>\n"
-"Vaši objednávku naleznete v sekci <a href=\"%1\" style=\"%2\">\"Historie "
-"objednávek\"</a> Vašeho zákaznického účtu."
-
 msgid "Vaše objednávka č. %1 byla zrušena."
 msgstr "Vaše objednávka č. %1 byla zrušena."
 
@@ -593,6 +604,15 @@ msgstr "Zboží Vám bude dodáno <strong>po obdržení Vaší platby</strong>."
 msgid "Zde jsou bankovní údaje pro platbu bankovním převodem:"
 msgstr "Zde jsou bankovní údaje pro platbu bankovním převodem:"
 
+msgid ""
+"V případě, že si chcete Vaši objednávku zkontrolovat,<br/>\n"
+"Vaši objednávku naleznete v sekci <a href=\"%1\" style=\"%2\">\"Historie "
+"objednávek\"</a> Vašeho zákaznického účtu."
+msgstr ""
+"V případě, že si chcete Vaši objednávku zkontrolovat,<br/>\n"
+"Vaši objednávku naleznete v sekci <a href=\"%1\" style=\"%2\">\"Historie "
+"objednávek\"</a> Vašeho zákaznického účtu."
+
 msgid "Částka k úhradě:"
 msgstr "Částka k úhradě:"
 
@@ -656,6 +676,9 @@ msgstr "Navštivte naši novou prodejnu"
 
 msgid "Aktuality"
 msgstr "Aktuality"
+
+msgid "Filter TOC"
+msgstr ""
 
 msgid "Table of contents"
 msgstr "Obsah"
@@ -786,6 +809,15 @@ msgstr "<small>cena od</small><br>%1"
 msgid "není v nabídce"
 msgstr "není v nabídce"
 
+msgid "Nastavení"
+msgstr ""
+
+msgid "OK"
+msgstr "OK"
+
+msgid "Souhlas můžete odmítnout %1 zde </a>"
+msgstr ""
+
 msgid "Doručovací adresa bude smazána. Pokračovat?"
 msgstr "Doručovací adresa bude smazána. Pokračovat?"
 
@@ -837,9 +869,6 @@ msgid ""
 msgstr ""
 "Některé položky nebyly vyplněny správně. Zkontrolujte formulář a opravte "
 "chyby."
-
-msgid "OK"
-msgstr "OK"
 
 msgid "Optional"
 msgstr "Volitelné"
@@ -939,23 +968,6 @@ msgstr "zavřít"
 
 msgid "Change language"
 msgstr "Změnit jazyk"
-
-msgid ""
-"K provozování webu %1 využíváme takzvané cookies. Cookies jsou soubory "
-"sloužící k přizpůsobení obsahu webu, k měření jeho funkčnosti a k zajištění "
-"vaší maximální spokojenosti. Používáním tohoto webu souhlasíte s tím, jak "
-"soubory cookies dále používáme."
-msgstr ""
-"K provozování webu %1 využíváme takzvané cookies. Cookies jsou soubory "
-"sloužící k přizpůsobení obsahu webu, k měření jeho funkčnosti a k zajištění "
-"vaší maximální spokojenosti. Používáním tohoto webu souhlasíte s tím, jak "
-"soubory cookies dále používáme."
-
-msgid "Souhlasím"
-msgstr "Souhlasím"
-
-msgid "Více informací"
-msgstr "Více informací"
 
 msgid "Social networks"
 msgstr "Sociální sítě"
@@ -1148,6 +1160,9 @@ msgstr "Informace o prodejně"
 
 msgid "právě otevřeno"
 msgstr "právě otevřeno"
+
+msgid "Více informací"
+msgstr "Více informací"
 
 msgid "Pages"
 msgstr "Stránky"
@@ -1498,48 +1513,6 @@ msgstr "Seznam kategorií"
 msgid "Categories"
 msgstr "Kategorie"
 
-#: ../app/controllers/checkouts_controller.php:5
-msgid "Shipping and payment method"
-msgstr "Způsob dopravy a platby"
-
-#: ../app/controllers/checkouts_controller.php:25
-msgid "Přihlášení uživatele"
-msgstr "Přihlášení uživatele"
-
-#: ../app/controllers/checkouts_controller.php:37
-msgid "Doručovací údaje"
-msgstr "Doručovací údaje"
-
-#: ../app/controllers/checkouts_controller.php:69
-msgid "Název doručovacího místa"
-msgstr "Název doručovacího místa"
-
-#: ../app/controllers/checkouts_controller.php:106
-msgid "Odstraňte prosím nedostatky, které brání dokončení objednávky"
-msgstr "Odstraňte prosím nedostatky, které brání dokončení objednávky"
-
-#: ../app/controllers/checkouts_controller.php:111
-msgid "Celková cena nesmí být záporná. Přihoďte do košíku ještě něco! :)"
-msgstr "Celková cena nesmí být záporná. Přihoďte do košíku ještě něco! :)"
-
-#: ../app/controllers/checkouts_controller.php:115
-msgid "Rekapitulace objednávky"
-msgstr "Rekapitulace objednávky"
-
-#: ../app/controllers/checkouts_controller.php:122
-msgid ""
-"Změnil se obsah nákupního košíku. Prohlédněte si rekapitulaci ještě jednou a "
-"dokončete objednávku."
-msgstr ""
-"Změnil se obsah nákupního košíku. Prohlédněte si rekapitulaci ještě jednou a "
-"dokončete objednávku."
-
-#: ../app/controllers/checkouts_controller.php:180
-#: ../app/controllers/delivery_service_branches_controller.php:26
-#: ../lib/delivery_services/src/app/controllers/delivery_service_branches_controller.php:26
-msgid "Nákupní košík"
-msgstr "Nákupní košík"
-
 #: ../app/controllers/collections_controller.php:4
 msgid "List of Collections"
 msgstr "Seznam kolekcí"
@@ -1556,6 +1529,19 @@ msgstr "Kontaktní zpráva"
 #: ../app/controllers/contact_messages_controller.php:33
 msgid "Contact message sent"
 msgstr "Kontaktní zpráva byla odeslána"
+
+#: ../app/controllers/cookie_consents_controller.php:33
+#: ../app/controllers/cookie_consents_controller.php:63
+msgid "Nastavení cookies bylo uloženo"
+msgstr ""
+
+#: ../app/controllers/cookie_consents_controller.php:49
+msgid "Používání všech cookies bylo přijato"
+msgstr ""
+
+#: ../app/controllers/cookie_consents_controller.php:56
+msgid "Používání cookies bylo zamítnuto"
+msgstr ""
 
 #: ../app/controllers/delivery_addresses_controller.php:5
 msgid "Seznam doručovacích adres"
@@ -1591,6 +1577,12 @@ msgstr "Doručovací adresy"
 msgid "%s - výběr výdejního místa"
 msgstr "%s - výběr výdejního místa"
 
+#: ../app/controllers/delivery_service_branches_controller.php:26
+#: ../app/controllers/checkouts_controller.php:180
+#: ../lib/delivery_services/src/app/controllers/delivery_service_branches_controller.php:26
+msgid "Nákupní košík"
+msgstr "Nákupní košík"
+
 #: ../app/controllers/digital_contents_controller.php:24
 #, php-format
 msgid "Digitální produkty v objednávce %s"
@@ -1604,6 +1596,42 @@ msgid ""
 msgstr ""
 "Pro stažení digitálních souborů z objednávky se prosím přihlaste jako "
 "uživatel <em>%s</em>"
+
+#: ../app/controllers/checkouts_controller.php:5
+msgid "Shipping and payment method"
+msgstr "Způsob dopravy a platby"
+
+#: ../app/controllers/checkouts_controller.php:25
+msgid "Přihlášení uživatele"
+msgstr "Přihlášení uživatele"
+
+#: ../app/controllers/checkouts_controller.php:37
+msgid "Doručovací údaje"
+msgstr "Doručovací údaje"
+
+#: ../app/controllers/checkouts_controller.php:69
+msgid "Název doručovacího místa"
+msgstr "Název doručovacího místa"
+
+#: ../app/controllers/checkouts_controller.php:106
+msgid "Odstraňte prosím nedostatky, které brání dokončení objednávky"
+msgstr "Odstraňte prosím nedostatky, které brání dokončení objednávky"
+
+#: ../app/controllers/checkouts_controller.php:111
+msgid "Celková cena nesmí být záporná. Přihoďte do košíku ještě něco! :)"
+msgstr "Celková cena nesmí být záporná. Přihoďte do košíku ještě něco! :)"
+
+#: ../app/controllers/checkouts_controller.php:115
+msgid "Rekapitulace objednávky"
+msgstr "Rekapitulace objednávky"
+
+#: ../app/controllers/checkouts_controller.php:122
+msgid ""
+"Změnil se obsah nákupního košíku. Prohlédněte si rekapitulaci ještě jednou a "
+"dokončete objednávku."
+msgstr ""
+"Změnil se obsah nákupního košíku. Prohlédněte si rekapitulaci ještě jednou a "
+"dokončete objednávku."
 
 #: ../app/controllers/logins_controller.php:16
 #, php-format
@@ -2113,55 +2141,11 @@ msgstr "Slevový kód"
 msgid "Vaše poznámka k objednávce"
 msgstr "Vaše poznámka k objednávce"
 
-#: ../app/forms/checkouts/set_billing_and_delivery_data_form.php:21
-msgid "Chci zadat fakturační údaje"
-msgstr "Chci zadat fakturační údaje"
-
-#: ../app/forms/checkouts/set_billing_and_delivery_data_form.php:29
-msgid "Pokračovat"
-msgstr "Pokračovat"
-
-#: ../app/forms/checkouts/set_billing_and_delivery_data_form.php:60
-msgid "Vyplňte všechny důležité údaje fakturační adresy"
-msgstr "Vyplňte všechny důležité údaje fakturační adresy"
-
-#: ../app/forms/checkouts/set_payment_and_delivery_method_form.php:8
-msgid "Select shipping method"
-msgstr "Vyberte způsob dopravy"
-
-#: ../app/forms/checkouts/set_payment_and_delivery_method_form.php:15
-msgid "Select payment method"
-msgstr "Vyberte způsob platby"
-
-#: ../app/forms/checkouts/set_payment_and_delivery_method_form.php:20
-msgid "Continue"
-msgstr "Pokračovat"
-
-#: ../app/forms/checkouts/set_payment_and_delivery_method_form.php:27
-msgid "Illegal combination of shipping and payment"
-msgstr "Neplatná kombinace dopravy a platby"
-
-#: ../app/forms/checkouts/summary_form.php:15
-msgid "Souhlasím s obchodními podmínkami"
-msgstr "Souhlasím s obchodními podmínkami"
-
-#: ../app/forms/checkouts/summary_form.php:19
 #: ../app/forms/contact_messages/create_new_form.php:18
+#: ../app/forms/checkouts/summary_form.php:19
 #: ../app/forms/information_requests/create_new_form.php:20
 msgid "Sign up for newsletter"
 msgstr "Přihlásit se k odběru newsletteru"
-
-#: ../app/forms/checkouts/summary_form.php:23
-msgid "Dokončit objednávku"
-msgstr "Dokončit objednávku"
-
-#: ../app/forms/checkouts/summary_form.php:30
-msgid "Objednávku nelze dokončit bez odsouhlasení našich obchodních podmínek."
-msgstr "Objednávku nelze dokončit bez odsouhlasení našich obchodních podmínek."
-
-#: ../app/forms/checkouts/summary_form.php:31
-msgid "Zatrhněte prosím souhlas s obchodními podmínkami."
-msgstr "Zatrhněte prosím souhlas s obchodními podmínkami."
 
 #: ../app/forms/contact_messages/create_new_form.php:24
 #: ../app/forms/information_requests/create_new_form.php:26
@@ -2219,6 +2203,46 @@ msgstr "Neplatná pobočka"
 #: ../app/forms/filter_form.php:8
 msgid "Filtrovat"
 msgstr "Filtrovat"
+
+#: ../app/forms/checkouts/set_billing_and_delivery_data_form.php:21
+msgid "Chci zadat fakturační údaje"
+msgstr "Chci zadat fakturační údaje"
+
+#: ../app/forms/checkouts/set_billing_and_delivery_data_form.php:29
+msgid "Pokračovat"
+msgstr "Pokračovat"
+
+#: ../app/forms/checkouts/set_billing_and_delivery_data_form.php:60
+msgid "Vyplňte všechny důležité údaje fakturační adresy"
+msgstr "Vyplňte všechny důležité údaje fakturační adresy"
+
+#: ../app/forms/checkouts/set_payment_and_delivery_method_form.php:8
+msgid "Select shipping method"
+msgstr "Vyberte způsob dopravy"
+
+#: ../app/forms/checkouts/set_payment_and_delivery_method_form.php:15
+msgid "Select payment method"
+msgstr "Vyberte způsob platby"
+
+#: ../app/forms/checkouts/set_payment_and_delivery_method_form.php:20
+msgid "Continue"
+msgstr "Pokračovat"
+
+#: ../app/forms/checkouts/set_payment_and_delivery_method_form.php:27
+msgid "Illegal combination of shipping and payment"
+msgstr "Neplatná kombinace dopravy a platby"
+
+#: ../app/forms/checkouts/summary_form.php:15
+msgid "Souhlasím s obchodními podmínkami"
+msgstr "Souhlasím s obchodními podmínkami"
+
+#: ../app/forms/checkouts/summary_form.php:23
+msgid "Dokončit objednávku"
+msgstr "Dokončit objednávku"
+
+#: ../app/forms/checkouts/summary_form.php:30
+msgid "Objednávku nelze dokončit bez odsouhlasení našich obchodních podmínek."
+msgstr "Objednávku nelze dokončit bez odsouhlasení našich obchodních podmínek."
 
 #: ../app/forms/logins/create_new_form.php:8
 msgid "Login name"
@@ -2654,26 +2678,40 @@ msgstr "Objednávka č. %s v e-shopu %s"
 msgid "obj. %s"
 msgstr "obj. %s"
 
-msgid "naskladnění sleduje hlídací pes"
-msgstr "naskladnění sleduje hlídací pes"
+#~ msgid ""
+#~ "K provozování webu %1 využíváme takzvané cookies. Cookies jsou soubory "
+#~ "sloužící k přizpůsobení obsahu webu, k měření jeho funkčnosti a k "
+#~ "zajištění vaší maximální spokojenosti. Používáním tohoto webu souhlasíte "
+#~ "s tím, jak soubory cookies dále používáme."
+#~ msgstr ""
+#~ "K provozování webu %1 využíváme takzvané cookies. Cookies jsou soubory "
+#~ "sloužící k přizpůsobení obsahu webu, k měření jeho funkčnosti a k "
+#~ "zajištění vaší maximální spokojenosti. Používáním tohoto webu souhlasíte "
+#~ "s tím, jak soubory cookies dále používáme."
 
-msgid "aktivovat hlídacího psa"
-msgstr "aktivovat hlídacího psa"
+#~ msgid "Souhlasím"
+#~ msgstr "Souhlasím"
 
-msgid "Zobrazit detaily"
-msgstr "Zobrazit detaily"
+#~ msgid "naskladnění sleduje hlídací pes"
+#~ msgstr "naskladnění sleduje hlídací pes"
 
-msgid "searching ..."
-msgstr "hledání ..."
+#~ msgid "aktivovat hlídacího psa"
+#~ msgstr "aktivovat hlídacího psa"
 
-msgid "cena od<br>%1"
-msgstr "cena od<br>%1"
+#~ msgid "Zobrazit detaily"
+#~ msgstr "Zobrazit detaily"
 
-msgid "Tvůrce"
-msgstr "Tvůrce"
+#~ msgid "searching ..."
+#~ msgstr "hledání ..."
 
-msgid "Nic nebylo nelezeno."
-msgstr "Nic nebylo nelezeno."
+#~ msgid "cena od<br>%1"
+#~ msgstr "cena od<br>%1"
+
+#~ msgid "Tvůrce"
+#~ msgstr "Tvůrce"
+
+#~ msgid "Nic nebylo nelezeno."
+#~ msgstr "Nic nebylo nelezeno."
 
 #~ msgid "Poznámka k objednávce"
 #~ msgstr "Poznámka k objednávce"
